# Projects

./: README.md
BoyerMooreSearch/: CMakeLists.txt  boyermooresearch.cpp  boyermooresearch.h  main.cpp
TCP_UDP/: UDPCLIENT_2.c  UDRPSERVEUR_1.c  clientTCP.c  serveurTCP.c
simple_Translator/: CMakeLists.txt  appicon.rc  main.cpp  menu.cpp  menu.h  translatorwindow.cpp  translatorwindow.h
